screenshots eingebaut hilfetexte ergänzt
Signed-off-by: winiwizi <winiwizi@>

--- a/Starfield-Game/resources/helpcontent/puzzleladen.html
+++ b/Starfield-Game/resources/helpcontent/puzzleladen.html
@@ -1,7 +1,9 @@
 <html>
-<title>Starfield - Puzzle laden</title>
+<title>Starfield - Puzzle bearbeiten</title>
 <body>
 <h1>Puzzle laden</h1>
-<p>Hier können Sie ein fertiges oder unfertiges Puzzle laden um Änderungen vorzunehmen.</p>
+<p>
+<img src="/helpcontent/screenshots/puzzlebearbeiten.png" alt="Puzzle laden">
+<br>Hier können Sie ein fertiges oder unfertiges Puzzle laden um Änderungen vorzunehmen.</p>
 </body>
 </html>
