--- a/Starfield-Game/resources/helpcontent/replayansehen.html
+++ b/Starfield-Game/resources/helpcontent/replayansehen.html
@@ -3,6 +3,12 @@
 <body>
 <h1>Replay ansehen</h1>
 <p>Nachdem Sie das Spiel erfolgreich gelöst haben, können Sie sich Ihren Spielverlauf noch einmal Zug für Zug anschauen.<br>
-Mit Hilfe der Buttons "Play" bzw. "Pause" starten oder pausieren Sie die Aufnahme. Durch Verschieben des Geschwindigkeitsreglers verändern Sie die Schnelligkeit der Wiedergabe.<br></p>
+Mit Hilfe der Buttons 
+<img src="/helpcontent/screenshots/play.png" alt="Play"> 
+bzw. 
+<img src="/helpcontent/screenshots/stop.png" alt="Pause">
+ starten oder pausieren Sie die Aufnahme. Durch Verschieben des Geschwindigkeitsreglers<br>
+ <img src="/helpcontent/screenshots/geschwindigkeit.png" alt="Geschwindigkeitsregler">
+<br>verändern Sie die Schnelligkeit der Wiedergabe.<br></p>
 </body>
 </html>
