--- a/Starfield-Game/resources/helpcontent/spielladen.html
+++ b/Starfield-Game/resources/helpcontent/spielladen.html
@@ -2,6 +2,8 @@
 <title>Starfield - Spiel laden</title>
 <body>
 <h1>Spiel laden</h1>
-<p>Hier können Sie ein schon begonnenes Spiel laden, um dieses weiterzuspielen.</p>
+<p>
+<img src="/helpcontent/screenshots/spielladen.png" alt="Spiel laden">
+<br>Hier können Sie ein schon begonnenes Spiel laden, um dieses weiterzuspielen.</p>
 </body>
 </html>
