--- a/Starfield-Game/resources/helpcontent/spielspeichern.html
+++ b/Starfield-Game/resources/helpcontent/spielspeichern.html
@@ -2,6 +2,8 @@
 <title>Starfield - Spiel speichern</title>
 <body>
 <h1>Spiel speichern</h1>
-<p>Hier können Sie ein schon begonnenes Spiel speichern, um dieses zu einem späteren Zeitpunkt weiterzuspielen.</p>
+<p>
+<img src="/helpcontent/screenshots/spielspeichern.png" alt="Spiel speichern">
+<br>Hier können Sie ein schon begonnenes Spiel speichern, um dieses zu einem späteren Zeitpunkt weiterzuspielen.</p>
 </body>
 </html>
