--- a/Starfield-Game/resources/helpcontent/auflosungandern.html
+++ b/Starfield-Game/resources/helpcontent/auflosungandern.html
@@ -2,6 +2,8 @@
 <title>Starfield - Auflösung ändern</title>
 <body>
 <h1>Auflösung ändern</h1>
-<p>Hier können Sie nachträglich die Auflösung verändern, um die Größe des Spielfeldes nach ihren Wünschen anzupassen.</p>
+<p>
+<img src="/helpcontent/screenshots/auflosung.png" alt="Auflösung ändern">
+<br>Hier können Sie nachträglich die Auflösung verändern, um die Größe des Spielfeldes nach ihren Wünschen anzupassen.</p>
 </body>
 </html>
