--- a/Starfield-Game/resources/helpcontent/neuesspiel.html
+++ b/Starfield-Game/resources/helpcontent/neuesspiel.html
@@ -2,7 +2,9 @@
 <title>Starfield - Neues Spiel</title>
 <body>
 <h1>Neues Spiel</h1>
-<p>Der Game-Modus wird gestartet und es erscheint das von Ihnen ausgewählte Puzzle.<br>
+<p>
+<img src="/helpcontent/screenshots/neuesspiel.png" alt="NeuesSpiel">
+<br>Der Game-Modus wird gestartet und es erscheint das von Ihnen ausgewählte Puzzle.<br>
 Auf dem Spielfeld können Sie Felder ausgrauen und Sterne setzen.<br>
 Das Ausgrauen von Feldern dient zur Erleichterung des Spiels und zum Festhalten von eigenen Lösungsmöglichkeiten. Um eine Spielsituation zu sichern, zu der Sie jeder Zeit zurückkehren können, haben Sie die Option Marker zu setzen.<br>
 Des Weiteren können Sie zu jedem Zeitpunkt Ihren letzten fehlerfreien Spielstand aufrufen.</p>
@@ -14,15 +16,23 @@ Des Weiteren können Sie zu jedem Zeitpunkt Ihren letzten fehlerfreien Spielstand
 <p>Zum Platzieren des Sterns auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Linksklick.<br></p>
 <h2>&nbsp;</h2>
 <h2>Marker setzen</h2>
-<p>Um einen Marker zu setzen, klicken Sie auf "Marker setzen".<br></p>
+<p>Um einen Marker zu setzen, klicken Sie auf 
+<img src="/helpcontent/screenshots/markersetzen.png" alt="Marker setzen">
+.<br></p>
 <h2>&nbsp;</h2>
 <h2>Gespeicherten Marker aufrufen</h2>
-<p>Wenn Sie zum zuletzt gesetzten Marker zurückkehren wollen, klicken Sie auf "zum letzten Marker zurück".<br></p>
+<p>Wenn Sie zum zuletzt gesetzten Marker zurückkehren wollen, klicken Sie auf 
+<img src="/helpcontent/screenshots/zumletztenmarker.png" alt="zum letzten Marker zurück">
+.<br></p>
 <h2>&nbsp;</h2>
 <h2>Alle Marker entfernen</h2>
-<p>Um alle gespeicherten Marker zu löschen, klicken Sie auf "alle Marker entfernen".<br></p>
+<p>Um alle gespeicherten Marker zu löschen, klicken Sie auf 
+<img src="/helpcontent/screenshots/allemarkerentfernen.png" alt="alle Marker entfernen">
+.<br></p>
 <h2>&nbsp;</h2>
 <h2>Fehlerfreien Spielstand wiederherstellen</h2>
-<p>Um einen fehlerfreien Spielstand herzustellen, klicken Sie auf "Zurück zum Fehler springen".<br></p>
+<p>Um einen fehlerfreien Spielstand herzustellen, klicken Sie auf 
+<img src="/helpcontent/screenshots/zuruckzumfehler.png" alt="Zurück zum Fehler springen">
+.<br></p>
 </body>
 </html>
