- Schriftarten in der Hilfe geändert
Signed-off-by: Nikolaj <info@nikolaj.de>

--- a/Starfield-Game/resources/helpcontent/auflosungandern.html
+++ b/Starfield-Game/resources/helpcontent/auflosungandern.html
@@ -1,9 +1,13 @@
 <html>
-<title>Starfield - Auflösung ändern</title>
+	<title>Starfield - Auflösung ändern</title>
 <body>
-<h1>Auflösung ändern</h1>
-<p>
-<img src="/helpcontent/screenshots/auflosung.png" alt="Auflösung ändern">
-<br>Hier können Sie nachträglich die Auflösung verändern, um die Größe des Spielfeldes nach ihren Wünschen anzupassen.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Auflösung ändern</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/auflosung.png" alt="Auflösung ändern" /><br />
+	Hier können Sie nachträglich die Auflösung verändern, um die Größe des Spielfeldes nach ihren Wünschen anzupassen.
+</div>
+
 </body>
 </html>
