--- a/Starfield-Game/resources/helpcontent/neuesspiel.html
+++ b/Starfield-Game/resources/helpcontent/neuesspiel.html
@@ -1,38 +1,44 @@
 <html>
-<title>Starfield - Neues Spiel</title>
+	<title>Starfield - Neues Spiel</title>
 <body>
-<h1>Neues Spiel</h1>
-<p>
-<img src="/helpcontent/screenshots/neuesspiel.png" alt="NeuesSpiel">
-<br>Der Game-Modus wird gestartet und es erscheint das von Ihnen ausgewählte Puzzle.<br>
-Auf dem Spielfeld können Sie Felder ausgrauen und Sterne setzen.<br>
-Das Ausgrauen von Feldern dient zur Erleichterung des Spiels und zum Festhalten von eigenen Lösungsmöglichkeiten. Um eine Spielsituation zu sichern, zu der Sie jeder Zeit zurückkehren können, haben Sie die Option Marker zu setzen.<br>
-Des Weiteren können Sie zu jedem Zeitpunkt Ihren letzten fehlerfreien Spielstand aufrufen.</p>
-<h2>&nbsp;</h2>
-<h2>Feld ausgrauen</h2>
-<p>Zum Ausgrauen eines Feldes auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Rechtsklick.<br></p>
-<h2>&nbsp;</h2>
-<h2>Stern setzen</h2>
-<p>Zum Platzieren des Sterns auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Linksklick.<br></p>
-<h2>&nbsp;</h2>
-<h2>Marker setzen</h2>
-<p>Um einen Marker zu setzen, klicken Sie auf 
-<img src="/helpcontent/screenshots/markersetzen.png" alt="Marker setzen">
-.<br></p>
-<h2>&nbsp;</h2>
-<h2>Gespeicherten Marker aufrufen</h2>
-<p>Wenn Sie zum zuletzt gesetzten Marker zurückkehren wollen, klicken Sie auf 
-<img src="/helpcontent/screenshots/zumletztenmarker.png" alt="zum letzten Marker zurück">
-.<br></p>
-<h2>&nbsp;</h2>
-<h2>Alle Marker entfernen</h2>
-<p>Um alle gespeicherten Marker zu löschen, klicken Sie auf 
-<img src="/helpcontent/screenshots/allemarkerentfernen.png" alt="alle Marker entfernen">
-.<br></p>
-<h2>&nbsp;</h2>
-<h2>Fehlerfreien Spielstand wiederherstellen</h2>
-<p>Um einen fehlerfreien Spielstand herzustellen, klicken Sie auf 
-<img src="/helpcontent/screenshots/zuruckzumfehler.png" alt="Zurück zum Fehler springen">
-.<br></p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Neues Spiel</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/neuesspiel.png" alt="NeuesSpiel" /><br />
+	Der Game-Modus wird gestartet und es erscheint das von Ihnen ausgewählte Puzzle.<br />
+	Auf dem Spielfeld können Sie Felder ausgrauen und Sterne setzen.<br />
+	Das Ausgrauen von Feldern dient zur Erleichterung des Spiels und zum Festhalten von eigenen Lösungsmöglichkeiten. Um eine Spielsituation zu sichern, zu der Sie jeder Zeit zurückkehren können, haben Sie die Option Marker zu setzen.<br />
+	Des Weiteren können Sie zu jedem Zeitpunkt Ihren letzten fehlerfreien Spielstand aufrufen.<br />
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Feld ausgrauen</div>
+	Zum Ausgrauen eines Feldes auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Rechtsklick.<br />
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Stern setzen</div>
+	Zum Platzieren des Sterns auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Linksklick.<br />
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Marker setzen</div>
+	Um einen Marker zu setzen, klicken Sie auf
+	<img src="/helpcontent/screenshots/markersetzen.png" alt="Marker setzen">.<br />
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Zu einem Marker zurückspringen</div>
+	Wenn Sie zum zuletzt gesetzten Marker zurückkehren wollen, klicken Sie auf 
+	<img src="/helpcontent/screenshots/zumletztenmarker.png" alt="zum letzten Marker zurück">.<br />
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Alle Marker entfernen</div>
+	Um alle gespeicherten Marker zu löschen, klicken Sie auf 
+	<img src="/helpcontent/screenshots/allemarkerentfernen.png" alt="alle Marker entfernen">.<br />
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Fehlerfreien Spielstand wiederherstellen</div>
+	Um einen fehlerfreien Spielstand herzustellen, klicken Sie auf 
+	<img src="/helpcontent/screenshots/zuruckzumfehler.png" alt="Zurück zum Fehler springen">.<br />
+</div>
+
 </body>
 </html>
