--- a/Starfield-Game/resources/helpcontent/puzzleerstellen.html
+++ b/Starfield-Game/resources/helpcontent/puzzleerstellen.html
@@ -1,41 +1,50 @@
 <html>
-<title>Starfield - Puzzle erstellen</title>
+	<title>Starfield - Puzzle erstellen</title>
 <body>
-<h1>Puzzle erstellen</h1>
-<p>Der Edit-Modus wird gestartet und Sie erhalten ein leeres Puzzle der Größe 5x5.<br>
-In diesem Puzzle können Sie beliebig Pfeile und Sterne setzen, die Zahlen am Rand werden am Ende automatisch generiert wenn Sie das Spiel starten. Achten Sie allerdings auf die Lösbarkeit des Puzzles die Sie mittels des Buttons 
-<img src="/helpcontent/screenshots/prufen.png" alt="Prüfen">
- abprüfen können.</p>
-<h2>&nbsp;</h2>
-<h2>Pfeile setzen</h2>
-<p>Zum setzen eines Pfeiles wählen Sie zunächst links in der Toolbar den gewünschten Pfeil mit einem Linksklick aus.<br>
-<img src="/helpcontent/screenshots/rechtemaus.png" alt="Pfeile">
-<br>Zum plazieren des Pfeils auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Rechtsklick.<br>
-Mit weiteren Rechtsklicks können Sie beliebig viele weitere Pfeile des ausgewählten Pfeiltyps setzen.</p>
-<h2>&nbsp;</h2>
-<h2>Pfeile ändern</h2>
-<p>Zum ändern eines Pfeils wählen Sie einfach den neuen gewünschten Pfeil in der Toolbar aus und überschreiben den zu ändernden Pfeil mit einem Rechtsklick.</p>
-<h2>&nbsp;</h2>
-<h2>Pfeile entfernen</h2>
-<p>Wenn Sie einen Pfeil entfernen wollen können Sie dies entweder mit einem Rechtsklick auf den ausgewählten Pfeil tun (oder ggf. ein doppelter Rechtsklick wenn ein anderer Pfeil als der auf dem Feld gesetzte Pfeil ausgewählt ist).<br>
-Desweiteren haben Sie hier die Möglichkeit das leere Feld (in der Mitte der Pfeile) in der Toolbar auszuwählen um beliebig viele Pfeile auf dem Spielfeld mit einem einfachen Rechtsklick zu entfernen.</p>
-<h2>&nbsp;</h2>
-<h2>Sterne setzen</h2>
-<p>Einen Stern können Sie einfach mit Hilfe eines Linksklicks dem gewünschten Feld platzieren.</p>
-<h2>&nbsp;</h2>
-<h2>Spielfeldgröße ändern</h2>
-<p>
-<img src="/helpcontent/screenshots/einstellungen.png" alt="Einstellungen">
-<br>Um dem Spielfeld die gewünschte Größe zuzuweisen geben Sie bitte in das erste Feld hinter Größe die gewünschte Anzahl der Felder in der Waagerechten ein und in das Feld rechts daneben die gewünschte Anzahl der Felder in der senkrechten ein.<br>
-Klicken Sie anschließend auf den Button 
-<img src="/helpcontent/screenshots/anwenden.png" alt="Anwenden">
- um die Größe zu ändern.<br>
-Sie können auch eines der Felder freilassen um nur die Anzahl der Felder auf einer Achse zu ändern.</p>
-<h2>&nbsp;</h2>
-<h2>Prüfen</h2>
-<p>Hier können Sie eine Prüfung durchführen, die das Spiel auf Spielbarkeit und Eindeutigkeit überprüft. Hierzu klicken Sie auf 
-<img src="/helpcontent/screenshots/prufen.png" alt="Prüfen">
-<br>Ein Spiel ist nicht eindeutig, wenn es mehrere Lösungsmöglichkeiten gibt. Dieses Problem kann durch den Einbau von zusätzlichen Pfeilen behoben werden.<br>
-Es ist empfehlenswert beim Erstellen eines Puzzles mehrfach zwischendurch zu prüfen, ob das Puzzle lösbar ist, um Fehler früh zu erkennen.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Puzzle erstellen</div>
+<br />
+<div style="font-family:Arial;">
+	Der Edit-Modus wird gestartet und Sie erhalten ein leeres Puzzle der Größe 5x5.<br />
+	In diesem Puzzle können Sie beliebig Pfeile und Sterne setzen, die Zahlen am Rand werden am Ende automatisch generiert wenn Sie das Spiel starten. Achten Sie allerdings auf die Lösbarkeit des Puzzles die Sie mittels des Buttons 
+	<img src="/helpcontent/screenshots/prufen.png" alt="Prüfen">
+	abprüfen können.
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Pfeile setzen</div>
+	Zum setzen eines Pfeiles wählen Sie zunächst links in der Toolbar den gewünschten Pfeil mit einem Linksklick aus.<br />
+	<img src="/helpcontent/screenshots/rechtemaus.png" alt="Pfeile"><br />
+	Zum plazieren des Pfeils auf dem Spielfeld, führen Sie den Mauszeiger auf das gewünschte Feld und setzen diesen mit einem Rechtsklick.<br />
+	Mit weiteren Rechtsklicks können Sie beliebig viele weitere Pfeile des ausgewählten Pfeiltyps setzen.
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Pfeile ändern</div>
+	Zum ändern eines Pfeils wählen Sie einfach den neuen gewünschten Pfeil in der Toolbar aus und überschreiben den zu ändernden Pfeil mit einem Rechtsklick.
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Pfeile entfernen</div>
+	Wenn Sie einen Pfeil entfernen wollen können Sie dies entweder mit einem Rechtsklick auf den ausgewählten Pfeil tun (oder ggf. ein doppelter Rechtsklick wenn ein anderer Pfeil als der auf dem Feld gesetzte Pfeil ausgewählt ist).<br />
+	Desweiteren haben Sie hier die Möglichkeit das leere Feld (in der Mitte der Pfeile) in der Toolbar auszuwählen um beliebig viele Pfeile auf dem Spielfeld mit einem einfachen Rechtsklick zu entfernen.
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Sterne setzen</div>
+	Einen Stern können Sie einfach mit Hilfe eines Linksklicks dem gewünschten Feld platzieren.
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Spielfeldgröße ändern</div>	
+	<img src="/helpcontent/screenshots/einstellungen.png" alt="Einstellungen"><br />
+	Um dem Spielfeld die gewünschte Größe zuzuweisen geben Sie bitte in das erste Feld hinter Größe die gewünschte Anzahl der Felder in der Waagerechten ein und in das Feld rechts daneben die gewünschte Anzahl der Felder in der senkrechten ein.<br />
+	Klicken Sie anschließend auf den Button 
+	<img src="/helpcontent/screenshots/anwenden.png" alt="Anwenden">
+	 um die Größe zu ändern.<br />
+	Sie können auch eines der Felder freilassen um nur die Anzahl der Felder auf einer Achse zu ändern.
+	<br />
+	<br />
+	<div style="font-family:Arial; font-size:14px;">Prüfen</div>
+	Hier können Sie eine Prüfung durchführen, die das Spiel auf Spielbarkeit und Eindeutigkeit überprüft. Hierzu klicken Sie auf 
+	<img src="/helpcontent/screenshots/prufen.png" alt="Prüfen"><br />
+	Ein Spiel ist nicht eindeutig, wenn es mehrere Lösungsmöglichkeiten gibt. Dieses Problem kann durch den Einbau von zusätzlichen Pfeilen behoben werden.<br />
+	Es ist empfehlenswert beim Erstellen eines Puzzles mehrfach zwischendurch zu prüfen, ob das Puzzle lösbar ist, um Fehler früh zu erkennen.
+</div>
 </body>
 </html>
