--- a/Starfield-Game/resources/helpcontent/puzzleladen.html
+++ b/Starfield-Game/resources/helpcontent/puzzleladen.html
@@ -1,9 +1,13 @@
 <html>
-<title>Starfield - Puzzle bearbeiten</title>
+	<title>Starfield - Puzzle bearbeiten</title>
 <body>
-<h1>Puzzle laden</h1>
-<p>
-<img src="/helpcontent/screenshots/puzzlebearbeiten.png" alt="Puzzle laden">
-<br>Hier können Sie ein fertiges oder unfertiges Puzzle laden um Änderungen vorzunehmen.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Puzzle laden</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/puzzlebearbeiten.png" alt="Puzzle laden"><br />
+	Hier können Sie ein fertiges oder unfertiges Puzzle laden um Änderungen vorzunehmen.
+</div>
+
 </body>
 </html>
