--- a/Starfield-Game/resources/helpcontent/puzzlespeichern.html
+++ b/Starfield-Game/resources/helpcontent/puzzlespeichern.html
@@ -1,12 +1,16 @@
 <html>
-<title>Starfield - Puzzle erstellen</title>
+	<title>Starfield - Puzzle erstellen</title>
 <body>
-<h1>Puzzle speichern</h1>
-<p>
-<img src="/helpcontent/screenshots/puzzlespeichern.png" alt="Puzzle speichern">
-<br>Hier können Sie ein fertiges oder unfertiges Puzzle speichern.<br>Beim speichern des Puzzles wird automatisch überprüft, ob das Puzzle spielbar ist. Wenn dies der Fall ist, kann das Puzzle anschließend gespielt werden über 
-<img src="/helpcontent/screenshots/neuesspiel.png" alt="Neues Spiel">
-.
-<br>Sollte das Puzzle nicht spielbar sein, bekommen Sie eine entsprechende Meldung, und können das Puzzle nur im Edit-Modus laden.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Puzzle speichern</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/puzzlespeichern.png" alt="Puzzle speichern"><br />
+	Hier können Sie ein fertiges oder unfertiges Puzzle speichern.<br />
+	Beim speichern des Puzzles wird automatisch überprüft, ob das Puzzle spielbar ist. Wenn dies der Fall ist, kann das Puzzle anschließend gespielt werden über 
+	<img src="/helpcontent/screenshots/neuesspiel.png" alt="Neues Spiel">.<br />
+	Sollte das Puzzle nicht spielbar sein, bekommen Sie eine entsprechende Meldung, und können das Puzzle nur im Edit-Modus laden.
+</div>
+
 </body>
 </html>
