--- a/Starfield-Game/resources/helpcontent/spielbeschreibung.html
+++ b/Starfield-Game/resources/helpcontent/spielbeschreibung.html
@@ -1,10 +1,15 @@
 <html>
-<title>Starfield - Spielbeschreibung</title>
+	<title>Starfield - Spielbeschreibung</title>
 <body>
-<h1>Starfield - Spielbeschreibung</h1>
-<p>Ziel des Spiels ist es Sterne an der richtigen Position auf dem Spielfeld zu platzieren.<br>
-Wenn alle Sterne an der richtigen Stelle platziert sind und kein Stern an einer falschen Stelle platziert ist, ist das Spiel gewonnen.<br>
-Jeder Pfeil muss auf mindestens einen Stern zeigen. Auf jeden Stern muss mindestens ein Pfeil zeigen.<br>
-Die Anzahl der Sterne in jeder Zeile und Spalte muss der entsprechenden Zahl am Rand des Spielfelds gleich sein.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Starfield - Spielbeschreibung</div>
+<br />
+<div style="font-family:Arial;">
+	Ziel des Spiels ist es Sterne an der richtigen Position auf dem Spielfeld zu platzieren.<br />
+	Wenn alle Sterne an der richtigen Stelle platziert sind und kein Stern an einer falschen Stelle platziert ist, ist das Spiel gewonnen.<br />
+	Jeder Pfeil muss auf mindestens einen Stern zeigen. Auf jeden Stern muss mindestens ein Pfeil zeigen.<br />
+	Die Anzahl der Sterne in jeder Zeile und Spalte muss der entsprechenden Zahl am Rand des Spielfelds gleich sein.
+</div>
+
 </body>
 </html>
