--- a/Starfield-Game/resources/helpcontent/spielladen.html
+++ b/Starfield-Game/resources/helpcontent/spielladen.html
@@ -1,9 +1,13 @@
 <html>
-<title>Starfield - Spiel laden</title>
+	<title>Starfield - Spiel laden</title>
 <body>
-<h1>Spiel laden</h1>
-<p>
-<img src="/helpcontent/screenshots/spielladen.png" alt="Spiel laden">
-<br>Hier können Sie ein schon begonnenes Spiel laden, um dieses weiterzuspielen.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Spiel laden</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/spielladen.png" alt="Spiel laden"><br />
+	Hier können Sie ein schon begonnenes Spiel laden, um dieses weiterzuspielen.
+</div>
+
 </body>
 </html>
