--- a/Starfield-Game/resources/helpcontent/spielspeichern.html
+++ b/Starfield-Game/resources/helpcontent/spielspeichern.html
@@ -1,9 +1,13 @@
 <html>
-<title>Starfield - Spiel speichern</title>
+	<title>Starfield - Spiel speichern</title>
 <body>
-<h1>Spiel speichern</h1>
-<p>
-<img src="/helpcontent/screenshots/spielspeichern.png" alt="Spiel speichern">
-<br>Hier können Sie ein schon begonnenes Spiel speichern, um dieses zu einem späteren Zeitpunkt weiterzuspielen.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Spiel speichern</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/spielspeichern.png" alt="Spiel speichern"><br />
+	Hier können Sie ein schon begonnenes Spiel speichern, um dieses zu einem späteren Zeitpunkt weiterzuspielen.
+</div>
+
 </body>
 </html>
