--- a/Starfield-Game/resources/helpcontent/hilfe.html
+++ b/Starfield-Game/resources/helpcontent/hilfe.html
@@ -1,9 +1,13 @@
 <html>
-<title>Starfield - Auflösung ändern</title>
+	<title>Starfield - Auflösung ändern</title>
 <body>
-<h1>Hilfsmodus</h1>
-<p>
-<img src="/helpcontent/screenshots/hilfsmodus.jpg" alt="Hilfsmodus">
-<br>Hier können Sie den Hilfsmodus einschalten. Fahren Sie nun mit der Maus über einen Pfeil, werden alle von diesem Pfeil eingeschlossenen Felder markiert.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Hilfsmodus</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/hilfsmodus.jpg" alt="Hilfsmodus"><br />
+	Hier können Sie den Hilfsmodus einschalten. Fahren Sie nun mit der Maus über einen Pfeil, werden alle von diesem Pfeil eingeschlossenen Felder markiert.
+</div>
+
 </body>
 </html>
