--- a/Starfield-Game/resources/helpcontent/lineal.html
+++ b/Starfield-Game/resources/helpcontent/lineal.html
@@ -1,9 +1,13 @@
 <html>
-<title>Starfield - Auflösung ändern</title>
+	<title>Starfield - Auflösung ändern</title>
 <body>
-<h1>Lineal</h1>
-<p>
-<img src="/helpcontent/screenshots/lineal.png" alt="Lineal">
-<br>Hier können Sie ein Lineal aktivieren, welches das Lösen des Spiels erleichtern wird.</p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Lineal</div>
+<br />
+<div style="font-family:Arial;">
+	<img src="/helpcontent/screenshots/lineal.png" alt="Lineal"><br />
+	Hier können Sie ein Lineal aktivieren, welches das Lösen des Spiels erleichtern wird.
+</div>
+
 </body>
 </html>
