--- a/Starfield-Game/resources/helpcontent/replayansehen.html
+++ b/Starfield-Game/resources/helpcontent/replayansehen.html
@@ -1,14 +1,19 @@
 <html>
-<title>Starfield - Replay ansehen</title>
+	<title>Starfield - Replay ansehen</title>
 <body>
-<h1>Replay ansehen</h1>
-<p>Nachdem Sie das Spiel erfolgreich gelöst haben, können Sie sich Ihren Spielverlauf noch einmal Zug für Zug anschauen.<br>
-Mit Hilfe der Buttons 
-<img src="/helpcontent/screenshots/play.png" alt="Play"> 
-bzw. 
-<img src="/helpcontent/screenshots/stop.png" alt="Pause">
- starten oder pausieren Sie die Aufnahme. Durch Verschieben des Geschwindigkeitsreglers<br>
- <img src="/helpcontent/screenshots/geschwindigkeit.png" alt="Geschwindigkeitsregler">
-<br>verändern Sie die Schnelligkeit der Wiedergabe.<br></p>
+
+<div style="font-family:Arial; font-size:18px; text-decoration:underline;">Replay ansehen</div>
+<br />
+<div style="font-family:Arial;">
+	Nachdem Sie das Spiel erfolgreich gelöst haben, können Sie sich Ihren Spielverlauf noch einmal Zug für Zug anschauen.<br />
+	Mit Hilfe der Buttons 
+	<img src="/helpcontent/screenshots/play.png" alt="Play"> 
+	bzw. 
+	<img src="/helpcontent/screenshots/stop.png" alt="Pause">
+	 starten oder pausieren Sie die Aufnahme. Durch Verschieben des Geschwindigkeitsreglers<br />
+	 <img src="/helpcontent/screenshots/geschwindigkeit.png" alt="Geschwindigkeitsregler">
+	<br />verändern Sie die Schnelligkeit der Wiedergabe.<br />
+</div>
+
 </body>
 </html>
